拓展 msg_conf 的消息上限, 并提供 msg_txt_cn 宏定义函数

--- a/conf/msg_conf/char_msg.conf
+++ b/conf/msg_conf/char_msg.conf
@@ -167,3 +167,7 @@
 227: GM
 228: Achievement Reward Mail
 229: [%s] Achievement Reward.
+
+// rAthenaCN 拓展的信息配置文件
+// ==================================================
+import: conf/msg_conf/racn_char_msg.conf
