--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1694,5 +1694,9 @@
 1503: You've entered a PK Zone.
 1504: You've entered a PK Zone (safe until level %d).
 
+// rAthenaCN 拓展的信息配置文件
+// ==================================================
+import: conf/msg_conf/racn_map_msg.conf
+
 //Custom translations
 import: conf/msg_conf/import/map_msg_eng_conf.txt
