能够支持在 map_athena.conf 中设定封包混淆密钥

--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -127,4 +127,19 @@ channel_conf: conf/channels.conf
 // Maps:
 import: conf/maps_athena.conf
 
+//===================================
+// rAthenaCN 拓展功能设置
+//===================================
+// 配置想要使用的封包混淆密钥
+// 
+// 从 v1.7.2 版本开始, rAthena 官方放弃了 db/packet_db.txt 文件
+// 以后在这里配置自定义的封包混淆密钥(若不配置, 则自动使用韩服官方客户端默认的混淆密钥).
+//
+// 关闭封包混淆机制的服务端不受此选项影响
+// rAthenaCN 默认开启混淆, 可在官网定制中关闭封包混淆功能.
+// 
+// 不想修改的话, 请保持默认值: default
+// 若想修改的话, 格式为(英文逗号左右都不能有空格): 0x347D68D0,0x2C705320,0x7B4A199D
+packet_keys: default
+
 import: conf/import/map_conf.txt
