拓展出辅助函数库代码文件 assistant.cpp, 可用于未来写项目通用的辅助函数

--- a/src/common/common-minicore.vcxproj
+++ b/src/common/common-minicore.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="assistant.hpp" />
     <ClInclude Include="cbasetypes.hpp" />
     <ClInclude Include="cli.hpp" />
     <ClInclude Include="conf.hpp" />
@@ -39,6 +40,7 @@
     <ClInclude Include="winapi.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="assistant.cpp" />
     <ClCompile Include="cli.cpp" />
     <ClCompile Include="conf.cpp" />
     <ClCompile Include="core.cpp" />
