--- a/src/common/common-minicore.vcxproj.filters
+++ b/src/common/common-minicore.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClInclude Include="assistant.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utf8.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cli.cpp">
@@ -119,6 +122,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="assistant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utf8.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
