--- a/src/common/common.vcxproj.filters
+++ b/src/common/common.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="assistant.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utf8.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cli.cpp">
@@ -155,6 +158,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="assistant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utf8.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
