在使用 M/F 进行注册时, 能够禁止使用中文等特殊字符作为游戏账号

--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -1,4 +1,4 @@
-// Athena Character configuration file.
+﻿// Athena Character configuration file.
 
 // Note: "Comments" are all text on the right side of a double slash "//"
 // Whatever text is commented will not be parsed by the servers, and serves
@@ -283,5 +283,18 @@ mail_return_days: 15
 // X: delete them X days after they were returned
 // Default: 15
 mail_delete_days: 15
+
+//===================================
+// rAthenaCN 拓展功能设置
+//===================================
+// 当程序崩溃时, 是否生成完整的崩溃转储文件?
+//  no: 生成迷你转储文件(体积仅有30~50kb, 但记录的信息少)
+// yes: 生成完整转储文件(体积等于程序崩溃时所占用的内存大小, 记录的信息丰富)
+// 
+// 为了能够在程序崩溃的时候, 让开发者能够采集到足够的信息从而快速定位并解决问题
+// 建议在磁盘空间足够的情况下, 生成“完整转储文件”.
+// 
+// 注意: 此文件中的开关仅控制"角色服务器"的崩溃转储文件类型
+create_fulldump: yes
 
 import: conf/import/char_conf.txt
