--- a/conf/login_athena.conf
+++ b/conf/login_athena.conf
@@ -1,4 +1,4 @@
-// Athena Login Server configuration file.
+﻿// Athena Login Server configuration file.
 // Translated by Peter Kieser <pfak@telus.net>
 
 // Note: "Comments" are all text on the right side of a double slash "//"
@@ -173,6 +173,25 @@ client_hash_check: off
 //client_hash: 0, 113e195e6c051bb1cfb12a644bb084c5
 //client_hash: 10, cb1ea78023d337c38e8ba5124e2338ae
 //client_hash: 99, disabled
+
+//===================================
+// rAthenaCN 拓展功能设置
+//===================================
+// 当程序崩溃时, 是否生成完整的崩溃转储文件?
+//  no: 生成迷你转储文件(体积仅有30~50kb, 但记录的信息少)
+// yes: 生成完整转储文件(体积等于程序崩溃时所占用的内存大小, 记录的信息丰富)
+// 
+// 为了能够在程序崩溃的时候, 让开发者能够采集到足够的信息从而快速定位并解决问题
+// 建议在磁盘空间足够的情况下, 生成“完整转储文件”.
+// 
+// 注意: 此文件中的开关仅控制"登录服务器"的崩溃转储文件类型
+create_fulldump: yes
+
+// 是否禁止使用中文字符作为游戏账号?
+// 启用此选项之后, 在使用 _M/_F 方式注册账号时, 只允许使用以下字符作为游戏账号:
+// 0~9、a-z、A-Z, 以及 ~!@#$%^&*()_-=+`[]{}\|;:'"<>,.?/ (不含空格)
+// 默认值为: yes
+strict_new_account_userid: yes
 
 import: conf/inter_athena.conf
 import: conf/import/login_conf.txt
