能够支持隐藏游戏服务器的在线人数

--- a/conf/login_athena.conf
+++ b/conf/login_athena.conf
@@ -193,5 +193,24 @@ create_fulldump: yes
 // 默认值为: yes
 strict_new_account_userid: yes
 
+// 是否隐藏角色服务器的在线人数?
+// 设置为 yes 的话, 就算玩家自己修改 msgstringtable.txt 中的内容,
+// 强行在 484 行中添加 %d 参数企图显示在线人数, 也会永远返回 0 人在线.
+// 默认值为: no
+//
+// 建议: 启用此选项之后, 最好将客户端 data/msgstringtable.txt 中
+// 第 484 行附近的 " 目前在线 %d 人#" 文本信息中的 %d 去掉,
+// 比如直接填写一个井号, 变成空行: "#"
+// 否则每次用户登录看到的在线人数都是 0 怪怪的.
+//
+// 若您使用的客户端版本大于或等于 2017-07-26 的话, 客户端应该已经不再显示
+// 出详细的在线人数了, 改而使用颜色和繁忙程度来描述服务器的压力.
+// 与服务器繁忙程度和颜色相关的选项, 在本文件的 usercount_disable 选项附近.
+//
+// 尽管如此, 无论您是否启用或者关闭 usercount_disable 选项,
+// 当客户端版本大于或等于 2017-07-26 时启用此选项,
+// 登录服务器也将强制把此文件中的 usercount_disable 选项设置为 yes.
+hide_online_players_count: no
+
 import: conf/inter_athena.conf
 import: conf/import/login_conf.txt
