能够支持禁止创建杜兰族角色

--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -297,4 +297,16 @@ mail_delete_days: 15
 // 注意: 此文件中的开关仅控制"角色服务器"的崩溃转储文件类型
 create_fulldump: yes
 
+// 是否禁止创建杜兰族角色?
+// 设置为 yes 的话, 创建杜兰族角色会直接失败.
+// 若用 2015-10-29 之后的客户端去开设复兴前服务器的话, 那么推荐开启此选项.
+// 默认值为: no
+//
+// 建议: 启用此选项之后, 最好将客户端 data/msgstringtable.txt 中
+// 第 12 行附近的 "创建角色失败. 可能是角色名不合法.#" 文本信息完善一下,
+// 比如修改成 "创建角色失败. 可能是角色名不合法. 请注意: 本服务器禁止创建杜兰族角色!#"
+//
+// 感谢“好刀一把”提出增设此选项的建议.
+reject_create_doram_character: no
+
 import: conf/import/char_conf.txt
