--- a/conf/atcommand_athena.conf
+++ b/conf/atcommand_athena.conf
@@ -25,6 +25,7 @@ aliases: {
 	iteminfo: ["ii"]
 	time: ["date", "serverdate", "servertime"]
 	autotrade: ["at"]
+	offline: ["offl"]
 	help: ["h"]
 	jumpto: ["goto", "warpto"]
 	mount: ["mountpeco"]
