更换 conf 目录中配置文件内所包含的项目名称

--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -285,7 +285,7 @@ mail_return_days: 15
 mail_delete_days: 15
 
 //===================================
-// rAthenaCN 拓展功能设置
+// Pandas 拓展设置
 //===================================
 // 当程序崩溃时, 是否生成完整的崩溃转储文件?
 //  no: 生成迷你转储文件(体积仅有30~50kb, 但记录的信息少)
