--- a/conf/login_athena.conf
+++ b/conf/login_athena.conf
@@ -175,7 +175,7 @@ client_hash_check: off
 //client_hash: 99, disabled
 
 //===================================
-// rAthenaCN 拓展功能设置
+// Pandas 拓展设置
 //===================================
 // 当程序崩溃时, 是否生成完整的崩溃转储文件?
 //  no: 生成迷你转储文件(体积仅有30~50kb, 但记录的信息少)
