--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1696,7 +1696,7 @@
 1503: You've entered a PK Zone.
 1504: You've entered a PK Zone (safe until level %d).
 
-// rAthenaCN 拓展的信息配置文件
+// Pandas 拓展的信息配置文件
 // ==================================================
 import: conf/msg_conf/racn_map_msg.conf
 
