--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -128,7 +128,7 @@ channel_conf: conf/channels.conf
 import: conf/maps_athena.conf
 
 //===================================
-// rAthenaCN 拓展功能设置
+// Pandas 拓展设置
 //===================================
 // 当程序崩溃时, 是否生成完整的崩溃转储文件?
 //  no: 生成迷你转储文件(体积仅有30~50kb, 但记录的信息少)
@@ -146,7 +146,7 @@ create_fulldump: yes
 // 以后在这里配置自定义的封包混淆密钥(若不配置, 则自动使用韩服官方客户端默认的混淆密钥).
 //
 // 关闭封包混淆机制的服务端不受此选项影响
-// rAthenaCN 默认开启混淆, 可在官网定制中关闭封包混淆功能.
+// Pandas 默认开启混淆, 可在官网定制中关闭封包混淆功能.
 // 
 // 不想修改的话, 请保持默认值: default
 // 若想修改的话, 格式为(英文逗号左右都不能有空格): 0x347D68D0,0x2C705320,0x7B4A199D
