--- a/conf/msg_conf/map_msg_chn.conf
+++ b/conf/msg_conf/map_msg_chn.conf
@@ -1497,7 +1497,7 @@
 // @guild
 1498: You cannot create a guild because you are in a clan.
 
-// rAthenaCN 拓展的資訊設定檔
+// Pandas 拓展的資訊設定檔
 // ==================================================
 import: conf/msg_conf/racn_map_msg.conf
 
