将 rAthenaCN 更名为 Pandas 熊猫 (#48)

--- a/conf/msg_conf/char_msg.conf
+++ b/conf/msg_conf/char_msg.conf
@@ -168,6 +168,6 @@
 228: Achievement Reward Mail
 229: [%s] Achievement Reward.
 
-// rAthenaCN 拓展的信息配置文件
+// Pandas 拓展的信息配置文件
 // ==================================================
-import: conf/msg_conf/racn_char_msg.conf
+import: conf/msg_conf/pandas_char_msg.conf
