--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1696,9 +1696,9 @@
 1503: You've entered a PK Zone.
 1504: You've entered a PK Zone (safe until level %d).
 
-// rAthenaCN 拓展的信息配置文件
+// Pandas 拓展的信息配置文件
 // ==================================================
-import: conf/msg_conf/racn_map_msg.conf
+import: conf/msg_conf/pandas_map_msg.conf
 
 //Custom translations
 import: conf/msg_conf/import/map_msg_eng_conf.txt
