--- a/conf/msg_conf/pandas_map_msg.conf
+++ b/conf/msg_conf/pandas_map_msg.conf
@@ -58,7 +58,7 @@
 //
 // --------------------------------------------------------------
 // 为了获得最佳展现效果,
-// rAthenaCN 对下列选项的字符长度有以下建议:
+// Pandas 对下列选项的字符长度有以下建议:
 // --------------------------------------------------------------
 // - 体型保持不超过1个汉字
 // - 种族保持不超过2个汉字
@@ -111,7 +111,7 @@
 2089: 目前共有 %d 个事件被触发, 共触发 %d 次, 处理事件累积总耗时: %d 毫秒
 
 // @version
-2090: rAthenaCN 版本: %s (运行模式: %s)
+2090: Pandas 版本: %s (运行模式: %s)
 2091: 客户端版本: %d | 定制编号: %s | 邮箱: %s
 2092: 复兴前
 2093: 复兴后
@@ -129,5 +129,5 @@
 // 仅用于复兴前, 复兴后使用的是客户端 msgstringtable.txt 中消息编号为 1923 的文本
 2099: 正在与其他 NPC 对话时无法使用此功能, 请结束与当前 NPC 的对话后, 再试一次.
 
-// 使用 @mapinfo 指令时, 作为 rAthenaCN 专有的普通地图标记
-2100: rAthenaCN 专属标记:
+// 使用 @mapinfo 指令时, 作为 Pandas 专有的普通地图标记
+2100: Pandas 专属标记:
