--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -151,12 +151,12 @@ name_ignoring_case: no
 // NOTE: Applies to character, party and guild names.
 // 0: no restriction (default)
 // 1: only letters/symbols in 'char_name_letters' option.
-// 2: Letters/symbols in 'char_name_letters' option are forbidden. All others are possibles.
-char_name_option: 1
+// 2: Letters/symbols in 'char_name_letters' option are forbidden. All others are possibles. (Pandas default)
+char_name_option: 2
 
 // Set the letters/symbols that you want use with the 'char_name_option' option.
 // Note: Don't add spaces unless you mean to add 'space' to the list.
-char_name_letters: abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890
+char_name_letters: \/:*?#@!
 
 // Restrict character deletion by BaseLevel
 // 0: no restriction (players can delete characters of any level)
