--- a/conf/battle/monster.conf
+++ b/conf/battle/monster.conf
@@ -183,20 +183,20 @@ mob_changetarget_byskill: no
 // If monster's class is changed will it fully recover HP? (Note 1)
 monster_class_change_full_recover: yes
 
-// 是否在魔物名称的附近显示一些附加信息? (掩码选项)
-// (此选项对于公会监护人魔物和华丽金属无效)
-//  1: 显示魔物的血量 (按 剩余血量/最大血量 方式显示)
-//  2: 显示魔物的血量 (按 百分比 方式显示)
-//  4: 显示魔物的级别
-//  8: 显示魔物的编号 [Pandas 扩展选项]
-// 16: 显示魔物的体型 [Pandas 扩展选项]
-// 32: 显示魔物的种族 [Pandas 扩展选项]
-// 64: 显示魔物的属性和属性等级 [Pandas 扩展选项]
-// 注意: 1、若启用选项1之后由于魔物血量太大, 而导致客户端无法完整显示“剩余血量/最大血量”的话, 
-//          会自动转成按百分比显示血量. 
-//       2、当同时启用选项1、2、8后, 如果魔物的编号加上后超长的话, 那么编号将被截断, 
-//          请适当的调整要展示的内容.  
-// 提示: Pandas 建议的默认值为 118
+// ????????????????????Щ???????? (???????)
+// (???????????????????????????Ч)
+//  1: ?????????? (?? ??????/?????? ??????)
+//  2: ?????????? (?? ???? ??????)
+//  4: ??????????
+//  8: ????????? [Pandas ??????]
+// 16: ??????????? [Pandas ??????]
+// 32: ??????????? [Pandas ??????]
+// 64: ?????????????????? [Pandas ??????]
+// ???: 1???????????1????????????????, ????????????????????????????/???????????, 
+//          ???????????????????. 
+//       2?????????????1??2??8??, ??????????????????, ????????????, 
+//          ???????????????????.  
+// ???: Pandas ?????????? 118
 show_mob_info: 118
 
 // Zeny from mobs
