--- a/src/map/map-server.vcxproj.filters
+++ b/src/map/map-server.vcxproj.filters
@@ -149,6 +149,9 @@
     <ClInclude Include="itemprops.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="itemamulet.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="achievement.cpp">
@@ -278,6 +281,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="itemprops.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="itemamulet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
