更新"道具特殊属性数据库"的说明

--- a/db/import-tmpl/item_properties.yml
+++ b/db/import-tmpl/item_properties.yml
@@ -21,11 +21,24 @@
 #
 # 1 - 表示避免物品被玩家主动使用而消耗
 # 2 - 避免物品被作为发动技能的必要道具而消耗
+# 4 - 表示此物品是一个护身符类型的道具
 #
 # 这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加, 直接填写 3 即可
 # 若填 3 则表示: 避免该物品被主动使用或作为技能道具而消耗
 #
 ###########################################################################
+
+#--------------------------------------------------------------------------
+# 护身符道具介绍
+#--------------------------------------------------------------------------
+#
+# - 无论物品本来在 ItemDB 中被定义的是哪种类型, 都会变成"其他"类道具
+# - 护身符类型的物品在背包界面和仓库界面会被归类到 "其他" 页面中
+# - 同种类的护身符在背包中有几个, 它的"使用脚本"就会被触发几次
+# - 同种类护身符只有第一个放到背包的时候, 会且只触发一次"穿戴脚本"
+# - 同种类护身符只有最后一个从背包移除掉的时候, 会且只触发一次"卸装脚本"
+# 
+#--------------------------------------------------------------------------
 
 Header:
   Type: ITEM_PROPERTIES_DB
