--- a/src/map/map-server.vcxproj
+++ b/src/map/map-server.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="map_artisan.hpp" />
     <ClInclude Include="mercenary.hpp" />
     <ClInclude Include="mob.hpp" />
+    <ClInclude Include="mobdrop.hpp" />
     <ClInclude Include="npc.hpp" />
     <ClInclude Include="party.hpp" />
     <ClInclude Include="path.hpp" />
@@ -242,6 +243,7 @@
     <ClCompile Include="mob.cpp">
       <Optimization Condition="'$(Configuration)'=='Release'">Disabled</Optimization>
     </ClCompile>
+    <ClCompile Include="mobdrop.cpp" />
     <ClCompile Include="npc.cpp" />
     <ClCompile Include="npc_chat.cpp" />
     <ClCompile Include="party.cpp" />
@@ -378,5 +380,6 @@
     <Copy SourceFiles="$(SolutionDir)db\import-tmpl\statpoint.txt" DestinationFolder="$(SolutionDir)db\import\" ContinueOnError="true" Condition="!Exists('$(SolutionDir)db\import\statpoint.txt')" />
     <Copy SourceFiles="$(SolutionDir)db\import-tmpl\status_disabled.txt" DestinationFolder="$(SolutionDir)db\import\" ContinueOnError="true" Condition="!Exists('$(SolutionDir)db\import\status_disabled.txt')" />
     <Copy SourceFiles="$(SolutionDir)db\import-tmpl\item_properties.yml" DestinationFolder="$(SolutionDir)db\import\" ContinueOnError="true" Condition="!Exists('$(SolutionDir)db\import\item_properties.yml')" />
+    <Copy SourceFiles="$(SolutionDir)db\import-tmpl\mob_item_ratio_fixed.yml" DestinationFolder="$(SolutionDir)db\import\" ContinueOnError="true" Condition="!Exists('$(SolutionDir)db\import\mob_item_ratio_fixed.yml')" />
   </Target>
 </Project>
