--- a/src/map/map-server.vcxproj.filters
+++ b/src/map/map-server.vcxproj.filters
@@ -152,6 +152,9 @@
     <ClInclude Include="itemamulet.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mobdrop.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="achievement.cpp">
@@ -284,6 +287,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="itemamulet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mobdrop.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
