--- a/db/import-tmpl/mob_item_ratio_fixed.yml
+++ b/db/import-tmpl/mob_item_ratio_fixed.yml
@@ -1,9 +1,66 @@
-﻿Header:
+﻿###########################################################################
+# MobItem Fixed Droprate Database - 魔物道具固定掉率数据库
+###########################################################################
+# 
+# 在本数据库中设置的掉率会无视 conf/battle/drops.conf 中以 item_rate* 开头
+# 的全局掉率配置选项.
+#
+# 为了方便理解本数据库的工作方式, 我们将 mob_db 中设置掉落的 MVP 道具和
+# 普通道具的掉率称之为"基础掉率". 下文 FixedRatio 节点指定的"固定基础掉率"
+# 将会用于强制替换 mob_db 中配置的 "基础掉率".
+#
+###########################################################################
+#
+# 注意事项
+# 
+# - 物品的最终掉率 = "固定基础掉率" + 等级惩罚、VIP掉率奖励等系统的影响.
+# - 在本数据库中配置的"固定基础掉率"将会无视 conf/battle/drops.conf 中
+#   item_drop_*_min/max 的选项影响.
+# - 此文件可以被 @reloadmobdb 指令重新加载.
+# - 这里设置的掉率并不是最终掉率. 复兴后版本掉率还会被“等级惩罚”等设置影响.
+# - 不会影响"增加某类道具掉率"的卡片效果, 也不会影响"紫色箱子"等转蛋道具
+#   开启后获得道具的掉率.
+# 
+###########################################################################
+#
+# - ItemID
+# 想进行固定掉率控制的道具编号
+#
+# 若在本数据库的多个配置文件中, 重复出现针对某个道具编号的多个配置,
+# 那么最终只会以最高优先级的配置为准, 优先级依次如下:
+#
+# - 1. db/import/mob_item_ratio_fixed.yml (高优先)
+# - 2. db/mob_item_ratio_fixed.yml (低优先)
+#
+# 若同一个文件中出现相同的道具编号, 会以更靠近文件末尾的配置为准
+#
+###########################################################################
+#
+# FixedRatio
+# 道具的"固定基础掉率", 这里填写 100 = 1% (填写 1 = 0.01%)
+# 最大值是 10000, 表示 100.00% 掉落
+#
+###########################################################################
+#
+# ForMonster
+# 可选节点, 若您希望固定掉率配置仅对某些魔物有效的话, 才需要它
+# 若不存在此节点, 那么表示影响所有掉落此道具的魔物
+# 
+# ---------------------------
+# 子节点说明
+# ---------------------------
+# 
+# - MobID
+# 使用 MobID 可以指定受影响的魔物编号, 该子节点可以出现多次
+#
+###########################################################################
+
+Header:
   Type: MOBITEM_FIXED_RATIO_DB
   Version: 1
 
 Body:
-#  - ItemID: 501
-#    FixedRatio: 10
+#  - ItemID: 905
+#    FixedRatio: 1
 #    ForMonster:
-#      - MobID: 1021
+#      - MobID: 1020
