添加用于绕过"等级惩罚"和"VIP掉率加成"的选项

--- a/db/import-tmpl/mob_item_ratio_fixed.yml
+++ b/db/import-tmpl/mob_item_ratio_fixed.yml
@@ -14,12 +14,15 @@
 # 注意事项
 # 
 # - 物品的最终掉率 = "固定基础掉率" + 等级惩罚、VIP掉率奖励等系统的影响.
+#   可通过 IgnoreLevelPenalty 和 IgnoreVipIncrease 选项来避免他们的影响.
+#
 # - 在本数据库中配置的"固定基础掉率"将会无视 conf/battle/drops.conf 中
 #   item_drop_*_min/max 的选项影响.
-# - 此文件可以被 @reloadmobdb 指令重新加载.
-# - 这里设置的掉率并不是最终掉率. 复兴后版本掉率还会被“等级惩罚”等设置影响.
+#
 # - 不会影响"增加某类道具掉率"的卡片效果, 也不会影响"紫色箱子"等转蛋道具
 #   开启后获得道具的掉率.
+#
+# - 此文件可以被 @reloadmobdb 指令重新加载.
 # 
 ###########################################################################
 #
@@ -37,8 +40,20 @@
 ###########################################################################
 #
 # FixedRatio
-# 道具的"固定基础掉率", 这里填写 100 = 1% (填写 1 = 0.01%)
+# 设置此道具的固定基础掉率, 这里填写 100 = 1% (填写 1 = 0.01%)
 # 最大值是 10000, 表示 100.00% 掉落
+#
+###########################################################################
+#
+# IgnoreLevelPenalty
+# 可选节点, 是否无视等级惩罚系统带来的物品掉率影响 (仅在复兴后模式生效)
+# 默认为 false, 若设置为 true, 则 FixedRatio 将不会被等级惩罚系统影响
+#
+###########################################################################
+#
+# IgnoreVipIncrease
+# 可选节点, 是否无视 conf/battle/player.conf 中的 vip_drop_increase 选项
+# 默认为 false, 若设置为 true, 则 FixedRatio 不会受到 VIP 掉率加成影响
 #
 ###########################################################################
 #
@@ -62,5 +77,7 @@ Header:
 Body:
 #  - ItemID: 905
 #    FixedRatio: 1
+#    IgnoreLevelPenalty: true
+#    IgnoreVipIncrease: false
 #    ForMonster:
 #      - MobID: 1020
