实现 nomail 地图标记的实际效果

--- a/conf/msg_conf/pandas_map_msg.conf
+++ b/conf/msg_conf/pandas_map_msg.conf
@@ -118,7 +118,7 @@
 2094: 暂无
 
 // 当地图被设置了 nomail 标记后, 玩家被禁用邮箱功能的提示文本
-2095: 此地图禁止使用邮箱!
+2095: 此地图禁止使用邮箱及其相关功能!
 
 // 当地图被设置了 nopet 标记后, 宠物被回收和禁止孵化的提示文本
 2096: 此地图禁止使用宠物, 已将你的宠物恢复为蛋状态.
