使 @mapinfo 可显示 mobinfo / mvpdroprate / mobdroprate 地图标记的当前值

--- a/conf/msg_conf/pandas_map_msg.conf
+++ b/conf/msg_conf/pandas_map_msg.conf
@@ -130,4 +130,4 @@
 2099: 正在与其他 NPC 对话时无法使用此功能, 请结束与当前 NPC 的对话后, 再试一次.
 
 // 使用 @mapinfo 指令时, 作为 Pandas 专有的普通地图标记
-2100: Pandas 专属标记:
+2100: Pandas 地图标记:
