--- a/conf/msg_conf/pandas_map_msg.conf
+++ b/conf/msg_conf/pandas_map_msg.conf
@@ -118,7 +118,7 @@
 2094: 暂无
 
 // 当地图被设置了 nomail 标记后, 玩家被禁用邮箱功能的提示文本
-2095: 此地图禁止使用邮箱!
+2095: 此地图禁止使用邮箱及其相关功能!
 
 // 当地图被设置了 nopet 标记后, 宠物被回收和禁止孵化的提示文本
 2096: 此地图禁止使用宠物, 已将你的宠物恢复为蛋状态.
@@ -130,4 +130,4 @@
 2099: 正在与其他 NPC 对话时无法使用此功能, 请结束与当前 NPC 的对话后, 再试一次.
 
 // 使用 @mapinfo 指令时, 作为 Pandas 专有的普通地图标记
-2100: Pandas 专属标记:
+2100: Pandas 地图标记:
