--- a/db/import-tmpl/mob_item_ratio_fixed.yml
+++ b/db/import-tmpl/mob_item_ratio_fixed.yml
@@ -14,7 +14,7 @@
 # 注意事项
 # 
 # - 物品的最终掉率 = "固定基础掉率" + 等级惩罚、VIP掉率奖励等系统的影响.
-#   可通过 IgnoreLevelPenalty 和 IgnoreVipIncrease 选项来避免他们的影响.
+#   可通过 StrictFixed 选项来避免他们的影响.
 #
 # - 在本数据库中配置的"固定基础掉率"将会无视 conf/battle/drops.conf 中
 #   item_drop_*_min/max 的选项影响.
@@ -45,15 +45,10 @@
 #
 ###########################################################################
 #
-# IgnoreLevelPenalty
-# 可选节点, 是否无视等级惩罚系统带来的物品掉率影响 (仅在复兴后模式生效)
-# 默认为 false, 若设置为 true, 则 FixedRatio 将不会被等级惩罚系统影响
-#
-###########################################################################
-#
-# IgnoreVipIncrease
-# 可选节点, 是否无视 conf/battle/player.conf 中的 vip_drop_increase 选项
-# 默认为 false, 若设置为 true, 则 FixedRatio 不会受到 VIP 掉率加成影响
+# StrictFixed
+# 可选节点, 是否严格固定此掉率
+# 默认为 false, 若设置为 true, 系统将忽略一切掉率调整机制(等级惩罚、VIP掉率奖励等)
+# 最终用来进行物品是否掉落的概率判断, 将直接以 FixedRatio 设置的掉率为准
 #
 ###########################################################################
 #
@@ -77,7 +72,6 @@ Header:
 Body:
 #  - ItemID: 905
 #    FixedRatio: 1
-#    IgnoreLevelPenalty: true
-#    IgnoreVipIncrease: false
+#    StrictFixed: false
 #    ForMonster:
 #      - MobID: 1020
