使 LGTM 不再对 FIXME 的代码注释进行警告

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -5,3 +5,5 @@ extraction:
       requirements_files: 
         - tools/python/requirements.txt
       setup_py: false
+queries:
+  - exclude: cpp/fixme-comment
