准备引入拓展的战斗配置选项文件

--- a/conf/battle_athena.conf
+++ b/conf/battle_athena.conf
@@ -1,4 +1,4 @@
-//--------------------------------------------------------------
+﻿//--------------------------------------------------------------
 // rAthena Battle Configuration File
 // Originally Translated by Peter Kieser <pfak@telus.net>
 // Made in to plainer English by Ancyker
@@ -59,3 +59,12 @@ import: conf/battle/misc.conf
 
 //Your custom config goes here.
 import: conf/import/battle_conf.txt
+
+//===================================
+// Pandas 拓展的战斗配置文件
+//===================================
+
+// 在此引入 Pandas 自定义的战斗配置选项
+// 目前的战斗配置选项比较少, 全部都放在 pandas.conf 中即可,
+// 未来战斗配置选项有很多个, 再考虑和 rAthena 官方一样进行配置文件拆分
+import: conf/battle/pandas.conf
