实现战斗配置选项添加助手的第一个版本

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -9,4 +9,4 @@
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-
+// PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
