--- a/src/tool/csv2yaml.vcxproj
+++ b/src/tool/csv2yaml.vcxproj
@@ -161,6 +161,12 @@
   <ItemGroup>
     <ClCompile Include="csv2yaml.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="csv2yaml_resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="csv2yaml.rc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
