--- a/3rdparty/breakpad/.gitignore
+++ b/3rdparty/breakpad/.gitignore
@@ -84,6 +84,6 @@ src/Makefile
 
 # Ignore directories gclient syncs.
 #src/testing
-src/third_party/lss
+#src/third_party/lss
 src/third_party/protobuf
 src/tools/gyp
